--- a/content/3-open-questions/18.md
+++ b/content/3-open-questions/18.md
@@ -76,7 +76,7 @@ A treatise by the Spaniard Vicente Poleró published in the mid-nineteenth centu
 
 Using the information gathered and the results of the questionnaire, we were able to establish the different ingredients used in the recipes and their function in the mixture: thickener, adhesive, fungicide, humectant, and so forth (see [table 18.1](#table-18-1)).
 
-In older recipes for *gacha* paste, such as those of Juan García de Miranda in 1735 ([fig. 18.3](#fig-18-3)), we find flour (the main component of which is starch), honey, walnut oil, and *grasilla* (  juniper resin). Among the ingredients of the Poleró recipe we also find garlic, glue, and linseed oil. Later formulas mention molasses, Venetian turpentine, oxgall, vinegar, Italian *colletta*, alum, flax seeds, and phenol. In Spain, wheat flour was typically used, but in France, Italy, and Portugal we find mention of rye flour. The glue used varies from strong or bone glue (called in Spanish what translates to carpenter’s glue) to hide or rabbit-skin glue. More recent recipes add Plextol B 500 as an adhesive and plasticizer.
+In older recipes for *gacha* paste, such as those of Juan García de Miranda in 1735 ([fig. 18.3](#fig-18-3)), we find flour (the main component of which is starch), honey, walnut oil, and *grasilla* ( juniper resin). Among the ingredients of the Poleró recipe we also find garlic, glue, and linseed oil. Later formulas mention molasses, Venetian turpentine, oxgall, vinegar, Italian *colletta*, alum, flax seeds, and phenol. In Spain, wheat flour was typically used, but in France, Italy, and Portugal we find mention of rye flour. The glue used varies from strong or bone glue (called in Spanish what translates to carpenter’s glue) to hide or rabbit-skin glue. More recent recipes add Plextol B 500 as an adhesive and plasticizer.
 
 {% figure 'fig-18-3' %}
 
@@ -132,7 +132,7 @@ In 2012, we also presented a poster to the TechnoHeritage Congress and published
 
 In 2014, we put forward some case studies at the Association des Restaurateurs d’Art et d’Archéologie de Formation Universitaire (ARAAFU) Colloquium in Paris ({% cite 'Macarrón, Calvo, and Gil 2014' %}, {% cite 'Macarrón, Calvo, and Gil 2017' '' '2017' %}). That same year we also produced a poster for the Art Technological Source Research working group’s congress at ICOM-CC in Amsterdam, whose contents we published in 2016 ({% cite 'Macarrón, Calvo, and Gil 2015' %}).
 
-The partial results of the experimental section were presented and published at the ICOM-CC in Copenhagen in 2017 (Fuster-López et al. 2017).
+The partial results of the experimental section were presented and published at the ICOM-CC in Copenhagen in 2017 ({% cite 'Fuster-López et al. 2017' %}).
 
 In 2018, we presented a summary of the project at the II Colloquium in Lisbon: Investigación en Conservación del Patrimonio (Heritage Conservation Research) ({% cite 'Macarrón, Calvo, and Gil 2018' %}). More recently, in June 2019, the four authors of this essay organized and taught a workshop at the Complutense University of Madrid, titled Applications of Traditional and Modern Lining Methods, with the assistance of museum professionals, private practitioners, and students ([fig. 18.6](#fig-18-6)). During the workshop, a wide range of adhesive formulations was tested on facsimiles. Thanks to the Avangrid Foundation grant, Ana Calvo and Julia Betancor were able to present this research during the Conserving Canvas symposium at Yale University in October 2019.
 
