--- a/content/3-open-questions/19.md
+++ b/content/3-open-questions/19.md
@@ -37,7 +37,7 @@ As part of his system, Mehra used a low-pressure “cold” table.[^1] Like the 
 
 New lining fabrics and new adhesives were also introduced. Mehra used a woven polyester fabric and a thickened acrylic dispersion ({% cite 'Mehra 1981a' %}). Conservators in Europe turned to acrylic dispersions for cold or low heat, nap-bond linings; Alois Diethelm commercialized these adhesives under the mark Lascaux. In the United States, conservators turned to heat-seal adhesives: Rabin developed a nap-bond system based on PVA adhesives,[^2] and Berger developed Beva 371 based on ethylene vinyl acetate. Fieux developed Fabri-Sil linings, a pressure-sensitive silicone adhesive cured onto Teflon-impregnated fiberglass ({% cite 'Fieux 1978' %}; {% cite 'John G. Shelley Co. 1985' %}). (Initially, Fabri-Sil looked like an excellent option, but bonds failed within a few years [{% cite 'Schwartzbaum 1993' %}; {% cite 'Belloli 1993' %}].)
 
-To avoid the use of heat or moisture to activate adhesives, solvent activation was studied ({% cite 'Phenix and Hedley 1984' %} {% cite 'Phenix and Hedley 1993' '' '1993' %}). Unfortunately, safety issues with electric blowers and pumps prevented us from fully incorporating this into our practice at the time. With the current mist-lining techniques of Jos van Och, we see the resurgence of solvent activation ({% cite 'van Och and Hoppenbrouwers 2003' %}).
+To avoid the use of heat or moisture to activate adhesives, solvent activation was studied ({% cite 'Phenix and Hedley 1984' %}, {% cite 'Phenix and Hedley 1993' '' '1993' %}). Unfortunately, safety issues with electric blowers and pumps prevented us from fully incorporating this into our practice at the time. With the current mist-lining techniques of Jos van Och, we see the resurgence of solvent activation ({% cite 'van Och and Hoppenbrouwers 2003' %}).
 
 Mehra, Hedley, and Villers began systematic studies of available synthetic fabrics and their properties ({% cite 'Hedley, Villers, and Mehra 1980' %}, {% cite 'Hedley, Villers, and Mehra 1993' '' '1993' %}). They encouraged a manufacturer to produce a wide, heat-set sailcloth without the usual impregnants ({% cite 'Hedley and Villers 1982' %}). In Canada and the United States, respectively, Roger Roche ({% cite 'R. Roche 1976' %}) and Blakney and Sutton introduced industrial monofilament fabrics and stiff filter and belt fabrics ({% cite 'Blakney and Sutton 1983' %}; {% cite 'Blakney 1993' %}).[^3] Methods of stiffening fabrics by using sizing or retaining Mylar on the reverse of linings were explored. Marouflage onto aluminum honeycomb supports was common, and laminates to increase rigidity were explored.[^4]
 
@@ -67,7 +67,7 @@ In the first phase of the Lining Project (1980s), we prepared samples with succe
 
 In our dimensional response study of 1985–86, we were surprised to see that samples taken from 47%–71% RH did not stabilize at their peak but began to shrink after only two hours at 71% RH. This was significantly lower than the \~85% RH we had presumed for onset of shrinkage based on tension studies prior to that date. By 1987, however, Hedley’s measurements ({% cite 'Hedley 1988' %}, {% cite 'Hedley 1993' '' '1993' %}) in our labs at CCI confirmed that a severe “shrinker,” when significantly prestressed, and before experiencing the permanent relaxation that occurs at 90% RH, could experience onset of shrinkage as early as 65% RH (see [fig. 19.2](#fig-19-2), double green broken line [10]). Such potential for shrinkage led to great caution in our use of humidity treatments in general.
 
-When using humidification tables for relaxation and flattening treatments, it is easy to produce higher humidity conditions than intended, particularly when that is combined with heat, even at low levels. Early monitoring of the Willard Multipurpose Table[^6] at CCI showed that even with a moderate setting of 76% RH and duct heating at 30°C, the humidity under the painting can rise to 90% RH and higher, due to the temperature difference between the warmer ducts and the cooler table surface. To reduce this risk, the conservator requested a monitoring system for RH under the painting ({% cite 'Daly Hartin et al. 2011' %} {% cite 'Daly Hartin et al. 2015b' '' '2015b' %}). By glancing at the computer display of conditions under an experimental painting—placed to one side of the painting being treated—the conservator could adjust the table settings to maintain safe levels of humidification.
+When using humidification tables for relaxation and flattening treatments, it is easy to produce higher humidity conditions than intended, particularly when that is combined with heat, even at low levels. Early monitoring of the Willard Multipurpose Table[^6] at CCI showed that even with a moderate setting of 76% RH and duct heating at 30°C, the humidity under the painting can rise to 90% RH and higher, due to the temperature difference between the warmer ducts and the cooler table surface. To reduce this risk, the conservator requested a monitoring system for RH under the painting ({% cite 'Daly Hartin et al. 2011' %}, {% cite 'Daly Hartin et al. 2015b' %}). By glancing at the computer display of conditions under an experimental painting—placed to one side of the painting being treated—the conservator could adjust the table settings to maintain safe levels of humidification.
 
 ### Sensitivity of the Size Layer and Preventive Conservation Measures
 
@@ -85,7 +85,7 @@ Conservators were aware of the high sensitivity of bond strength to temperature,
 
 An example of the importance of mock-ups and of monitoring temperature uniformity of hot table surfaces was adapting to the change in Beva 371 film from its original formulation to Beva 371b. In 2010, we were informed by the manufacturer that despite this change, the new product had the same properties.[^7] Many conservators, however, had found differences in performance.
 
-Élisabeth Forest, a paintings conservator at the Centre de Conservation du Québec, had used peel tests to study Beva 371 film while a student ({% cite 'Forest 1997' %}). She found that 65˚C and a ten-minute holding time gave an acceptable bond.[^8] This formed the guideline for many successful linings. However, using the new formulation under the same conditions, she found there was a high probability of local detachment during restretching of both linings and strip-linings.
+Élisabeth Forest, a paintings conservator at the Centre de Conservation du Québec, had used peel tests to study Beva 371 film while a student ({% cite 'Forest 1997' %}). She found that 65°C and a ten-minute holding time gave an acceptable bond.[^8] This formed the guideline for many successful linings. However, using the new formulation under the same conditions, she found there was a high probability of local detachment during restretching of both linings and strip-linings.
 
 In 2018, Forest compared the two formulations in a study undertaken at the Centre de Conservation du Québec ({% cite 'Forest 2019' %}). As in the previous tests, two reactivation temperatures (65°C and 70°C) and two holding times (0 and 10 minutes at the activation temperature) were used ([fig. 19.4](#fig-19-4)). The nap-bond strength of both formulations was strongly influenced by temperature, more than doubling in force between 65°C and 70°C. Based on what was considered a reliable bond, 0.33–0.41 kN/m,[^9] shown by the red lines in [figure 19.4](#fig-19-4), only lining at 70°C with a duration of ten minutes was successful.
 
@@ -101,7 +101,7 @@ The primary measurement for answering this question is stress relaxation—the l
 
 By 1991, we were placing our review of published data on the mechanics of paints within the framework of polymer viscoelasticity. Specifically, we introduced the primary tool of that framework—the “master curve”—which plotted elasticity over the full range of a polymer’s behavior, from glassy through leathery to rubbery as a function of temperature, plasticizer, and time ({% cite 'Michalski 1991' %}).
 
-To understand whether a lining will actually support the painting and by how much, analysis of results focused on whether the lining is at higher tension than the painting during stretching, during shock and vibration, and during fluctuations in RH and temperature—and on whether the lining can maintain this support over many years. Sample preparation and experimental procedures have been published elsewhere ({% cite 'Michalski and Daly Hartin 1996' %}, {% cite 'Daly Hartin et al. 2010' %}, {% cite 'Daly Hartin et al. 2011' '' '2011' %} {% cite 'Daly Hartin et al. 2015a' '' '2015a' }; {% cite 'Michalski et al. 2014' %}). The 2015 article also summarizes the results of the project and their implications for linings.
+To understand whether a lining will actually support the painting and by how much, analysis of results focused on whether the lining is at higher tension than the painting during stretching, during shock and vibration, and during fluctuations in RH and temperature—and on whether the lining can maintain this support over many years. Sample preparation and experimental procedures have been published elsewhere ({% cite 'Michalski and Daly Hartin 1996' %}, {% cite 'Daly Hartin et al. 2010' %}, {% cite 'Daly Hartin et al. 2011' '' '2011' %}, {% cite 'Daly Hartin et al. 2015a' '' '2015a' %}, {% cite 'Michalski et al. 2014' %}). The 2015 article also summarizes the results of the project and their implications for linings.
 
 Tension was measured continuously over time. If the sample is undergoing stress relaxation, then the tension drops over time, as shown by all curves in [figure 19.5](#fig-19-5). The process of building these master curves that extend to very short and very long times is described by [Hagan](/1-history/2) in this volume.
 
