--- a/content/3-open-questions/20.md
+++ b/content/3-open-questions/20.md
@@ -78,7 +78,7 @@ When overall consolidation was necessary, a consolidant like Plexisol was used. 
 
 ## Willard’s Design
 
-Similar to Bent Hacke, Anthony Reeve saw a need to standardize or mechanize the process of glue lining, and from this the Willard table was developed ({% cite 'Reeve 1984' %}). This table is rather more explicitly one designed to execute—and, more importantly, control—glue linings. As glue linings rely greatly on the skill of the liner and the liner's experience, many of the features of the Willard table integrate controls that rely on such knowledge to bring the table to full operation. The heating is not too different from the Hacke table, although the flow is considerably more complicated. The idea of humidifying from the rear is the same and is also mechanized, as Hacke’s table ultimately was. Hacke rather dryly noted that “it proves to be very complicated to work out a system which makes it possible to blow in moist air which can be accumulated in the structure of the painting.”[^4] The mechanization of humidification through the ducting of a suction table is indeed a technically difficult proposition, and therefore an abundance of controls are built into the Willard table. The potential for damage by too much moisture is well known to glue liners and thus the system incorporates a dehumidifier as well. Early versions of the Willard table were tested quite rigorously at the National Gallery, London, and at Tate, with extensive modification of the initial design to accommodate a number of difficulties encountered, such as condensation in the ducting and on the surface of the table ({% cite 'Reeve, Ackroyd, and Stephenson-Wright 1988' %}).
+Similar to Bent Hacke, Anthony Reeve saw a need to standardize or mechanize the process of glue lining, and from this the Willard table was developed ({% cite 'Reeve 1984' %}). This table is one rather more explicitly designed to execute—and, more importantly, control—glue linings. As glue linings rely greatly on the skill of the liner and the liner's experience, many of the features of the Willard table integrate controls that rely on such knowledge to bring the table to full operation. The heating is not too different from the Hacke table, although the flow is considerably more complicated. The idea of humidifying from the rear is the same and is also mechanized, as Hacke’s table ultimately was. Hacke rather dryly noted that “it proves to be very complicated to work out a system which makes it possible to blow in moist air which can be accumulated in the structure of the painting.”[^4] The mechanization of humidification through the ducting of a suction table is indeed a technically difficult proposition, and therefore an abundance of controls are built into the Willard table. The potential for damage by too much moisture is well known to glue liners and thus the system incorporates a dehumidifier as well. Early versions of the Willard table were tested quite rigorously at the National Gallery, London, and at Tate, with extensive modification of the initial design to accommodate a number of difficulties encountered, such as condensation in the ducting and on the surface of the table ({% cite 'Reeve, Ackroyd, and Stephenson-Wright 1988' %}).
 
 One of the critical features of this design is the two independent flow patterns. One set of channels introduces the conditioned air to the backside of the painting or, theoretically, up into a closed chamber; the other flow system holds the painting flat on the table. As with the Hacke table, there are removable aluminum sheets. This table has since been produced commercially and is widely distributed.
 
