--- a/content/3-open-questions/21.md
+++ b/content/3-open-questions/21.md
@@ -50,7 +50,7 @@ This is much in line with the sixth requirement, that increase of weight due to 
 
 ### The Flexibility Requirement
 
-The fourth requirement (see [table 21.1](#table-21-1)) is that flexibility must be guaranteed for an unlimited period of time. It is not specified if Mehra means in the complete lining structure or in the canvas, the adhesive, or a possible interleaf. An argument for a flexible lining adhesive was mentioned as early as 1931, when the Canadian painter and sculptor Percyval Tudor-Hart advised that a lining adhesive should provide unlimited flexibility and recommended the “Dutch” adhesive ({% cite 'Tudor-Hart 1931' %}), and that same year two American conservators remarked that a wax lining is “the best that is yet found for relining ... It is flexible, never becoming brittle” ({% cite 'Durham and Leser 1931' '38' %}). The unlimited flexibility mentioned by Mehra should be seen in light of these sources and the long historical experience with brittle glue-paste linings. However, flexibility in lining adhesive and flexibility in lining as a whole are two very different concepts. In his requirements, Mehra mentioned the lining as a whole and not just the adhesive. In 1981, he contradicted this requirement in a paper on lining canvases, where he wrote that lining canvases should be as stiff as possible ({% cite 'Mehra 1981b' %}).
+The fourth requirement (see [table 21.1](#table-21-1)) is that flexibility must be guaranteed for an unlimited period of time. It is not specified if Mehra means in the complete lining structure or in the canvas, the adhesive, or a possible interleaf. An argument for a flexible lining adhesive was mentioned as early as 1931, when the Canadian painter and sculptor Percyval Tudor-Hart advised that a lining adhesive should provide unlimited flexibility and recommended the “Dutch” adhesive ({% cite 'Tudor-Hart 1931' %}), and that same year two American conservators remarked that a wax-lining is “the best that is yet found for relining . . . It is flexible, never becoming brittle” ({% cite 'Durham and Leser 1931' '38' %}). The unlimited flexibility mentioned by Mehra should be seen in light of these sources and the long historical experience with brittle glue-paste linings. However, flexibility in lining adhesive and flexibility in lining as a whole are two very different concepts. In his requirements, Mehra mentioned the lining as a whole and not just the adhesive. In 1981, he contradicted this requirement in a paper on lining canvases, where he wrote that lining canvases should be as stiff as possible ({% cite 'Mehra 1981b' %}).
 
 A year later, Mecklenburg summed up his approach to providing stability in a painting: “to support a painting, the material chosen must: 1) be capable of developing and maintaining a large percentage of the total force of a stretched painting; 2) be able to restrain in-plane displacement as developed by desiccated glue and paint films; 3) restrain out-of-plane distortion such as cupping and buckling” ({% cite 'Mecklenburg 1982' '27' %}). He furthermore advised that a high modulus[^3] of the lining material was preferable and that thickness would provide support against out-of-plane distortions.
 
