--- a/content/4-case-studies/25.md
+++ b/content/4-case-studies/25.md
@@ -60,7 +60,7 @@ To learn more about the deterioration of the collection, I needed more informati
 >
 > —Chéri Samba ({% cite 'Our Choices Art 2017' %})
 
-The museum’s collection features famous self-educated artists such as Ange Kumbi, Chéri Samba, Tshibumba, Shula, Moke, Chéri Cherin, and others from the Academy of Fine Arts, including Thango and Lubaki. The paintings by self-educated artists depict historical and moral topics ([fig. 25.1](#fig-25-1)) as well as the daily life of the Congolese. The subjects represent the real lives of people: colonialism, prostitution, scenes of violence, AIDS and other diseases, political views, and the opinions, feelings, and sensitivities of people, as well as moments of daily lives—a visit to the hairdresser, an argument between a husband and his wife, a battle against mosquitoes, and many more quotidian scenes. They also show the humor in some situations.
+The museum’s collection features famous self-educated artists such as Ange Kumbi, Chéri Samba, Tshibumba, Shula, Moke, Chéri Cherin, and others from the Academy of Fine Arts, including Thango and Lubaki. The paintings by self-educated artists depict historical and moral topics ([fig. 25.1](#fig-25-1)) as well as the daily lives of the Congolese. The subjects represent the real lives of people: colonialism, prostitution, scenes of violence, AIDS and other diseases, political views, and the opinions, feelings, and sensitivities of people, as well as moments of daily lives—a visit to the hairdresser, an argument between a husband and his wife, a battle against mosquitoes, and many more quotidian scenes. They also show the humor in some situations.
 
 {% figure 'fig-25-1' %}
 
